--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-
-
-        </configuration>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <id>javadoc-jar</id>
